tests/ui/impl-trait/in-trait/alias-bounds-when-not-wf.stderr
error[E0277]: the trait bound `usize: Foo` is not satisfied
  --> $DIR/alias-bounds-when-not-wf.rs:15:15
   |
LL | fn hello(_: W<A<usize>>) {}
   |               ^^^^^^^^ the trait `Foo` is not implemented for `usize`
   |
help: this trait has no implementations, consider adding one
  --> $DIR/alias-bounds-when-not-wf.rs:5:1
   |
LL | trait Foo {}
   | ^^^^^^^^^
note: required by a bound in `A`
  --> $DIR/alias-bounds-when-not-wf.rs:7:11
   |
LL | type A<T: Foo> = T;
   |           ^^^ required by this bound in `A`

error[E0277]: the trait bound `usize: Foo` is not satisfied
  --> $DIR/alias-bounds-when-not-wf.rs:15:13
   |
LL | fn hello(_: W<A<usize>>) {}
   |             ^^^^^^^^^^^ the trait `Foo` is not implemented for `usize`
   |
help: this trait has no implementations, consider adding one
  --> $DIR/alias-bounds-when-not-wf.rs:5:1
   |
LL | trait Foo {}
   | ^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
